# htmlparser-swift

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
Sources/AK/: CMakeLists.txt
Sources/GenerateNamedCharacterReferences/: CMakeLists.txt  GenerateNamedCharacterReferences.cpp
Sources/HtmlParser/: CMakeLists.txt  Entities.cpp  Entities.h  HTMLToken.swift  HTMLTokenizer.swift  HTMLTokenizerHelpers.cpp  HTMLTokenizerHelpers.h  SpeculativeHTMLParser.swift
Sources/LibCore/: CMakeLists.txt  File.h
Tests/HtmlParserTests/: CMakeLists.txt  TestHTMLTokenizerSwift.swift
Tests/Resources/: SwiftTestMain.swift
cmake/: FindSwiftTesting.cmake  compile_options.cmake  simdutf.cmake  swift-settings.cmake  utils.cmake
cmake/patches/simdutf/: 0001-CMake-Guard-shell-based-tests-with-SIMDUTF_TESTS.patch
